--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -16,7 +16,7 @@
                 <div class="col-2">
                     <div class="list-group list-group-flush text-center">
                         <a href="/" class="list-group-item">Index</a>
-                        <a href="/productlist" class="list-group-item disabled" disabled>Products</a>
+                        <a href="/productlist" class="list-group-item">Products</a>
                         <a href="/stock" class="list-group-item">Stocks</a>
                         <a href="/deliveryOrder" class="list-group-item">Delivery Orders</a>
                         <a href="/user" class="list-group-item">Users</a>
