--- a/views/stock/enquiry.ejs
+++ b/views/stock/enquiry.ejs
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-2">
                 <div class="list-group list-group-flush text-center">
-                    <a href="/" class="list-group-item disabled" disabled>Index</a>
+                    <a href="/" class="list-group-item">Index</a>
                     <a href="/productlist" class="list-group-item">Products</a>
                     <a href="/stock" class="list-group-item">Stocks</a>
                     <a href="/deliveryOrder" class="list-group-item">Delivery Orders</a>
