--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -12,7 +12,7 @@
                         <a href="/productlist" class="list-group-item">Products</a>
                         <a href="/stock" class="list-group-item">Stocks</a>
                         <a href="/deliveryOrder" class="list-group-item">Delivery Orders</a>
-                        <a href="/user" class="list-group-item disabled" disabled>Users</a>
+                        <a href="/user" class="list-group-item">Users</a>
                         <button type="submit" form="logout" class="list-group-item">Logout</button>
                     </div>
                     
