--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -16,7 +16,7 @@
                     <a href="/productlist" class="list-group-item">Products</a>
                     <a href="/stock" class="list-group-item">Stocks</a>
                     <a href="/deliveryOrder" class="list-group-item">Delivery Orders</a>
-                    <a href="/user" class="list-group-item disabled" disabled>Users</a>
+                    <a href="/user" class="list-group-item">Users</a>
                     <button type="submit" form="logout" class="list-group-item">Logout</button>
                 </div>
                 
@@ -40,7 +40,7 @@
 
                 <form action="/user/save" method="post">
                     <input type="text" name="id" value="<%= data._id %>" hidden />
-                    <div class="row m-1">
+                    <div class="row my-1">
                         <div class="col">
                             <label for="user_id">User Id:</label>
                         </div>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
 
-                    <div class="row m-1">
+                    <div class="row my-1">
                         <div class="col">
                             <label for="username">Username:</label>
                         </div>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
 
-                    <div class="row m-1">
+                    <div class="row my-1">
                         <div class="col">
                             <label for="password">Password:</label>
                         </div>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
 
-                    <div class="row m-1">
+                    <div class="row my-1">
                         <div class="col">
                             <label for="confirm_password">Confirm Password:</label>
                         </div>
@@ -76,23 +76,25 @@
                         </div>
                     </div>
 
-                    <div class="row m-1">
+                    <div class="row my-1">
                         <div class="col">
-                            <label for="name">name:</label>
+                            <label for="name">Name:</label>
                         </div>
                         <div class="col">
                             <input type="text" id="name" name="name" class="form-control" value="<%= data.name %>" placeholder="name">
                         </div>
                     </div>
 
-                    <div class="row m-1">
+                    <div class="row my-1">
                         <div class="col">
-                            <label>role:</label>
+                            <label>Role:</label>
                         </div>
                         <div class="col">
                             <% for(let role of roles){ %>
-                                <input type="radio" id="<%=role.display_name %>" name="role" value="<%= role.value %>" <%= role.value==data.role? "checked": "" %> >
-                                <label for="<%= role.display_name %>"><%= role.display_name %></label><br>
+                                <div class="form-check">
+                                    <input type="radio" id="<%=role.display_name %>" name="role" value="<%= role.value %>" class="form-check-input" <%= role.value==data.role? "checked": "" %> >
+                                    <label for="<%= role.display_name %>" class="form-check-label"><%= role.display_name %></label>
+                                </div>
                             <% } %>
                         </div>
                     </div>
@@ -100,7 +102,7 @@
                     <div class="row">
                         <label name="error" class="text-danger"><%= message %></label>
                     </div>
-                    <input type="submit" value="<%= data._id? 'Update user' : 'Create User' %>" class="btn btn-primary m-1">
+                    <input type="submit" value="<%= data._id? 'Update user' : 'Create User' %>" class="btn btn-primary my-1">
                     <% if(data._id){ %>
                         <button type="submit" form="delete" class="btn btn-warning">Delete</button>
                     <% } %>
