--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -62,7 +62,7 @@
                             <a href='/productlist/sort?sort=stock_id&seq=<%= sort==="stock_id"?-1:1 %>'>所在倉庫區</a>
                         </div>
                         <div class="col fw-bold fs-5">
-                            <a href='/productlist/sort?sort=&seq=<%= sort===""?-1:1 %>'>快將過期數量</a>
+                            <!--<a href='/productlist/sort?sort=&seq=<%= sort===""?-1:1 %>'>快將過期數量</a>-->
                         </div>
                         <div class="col fw-bold fs-5">
                             
